# advent-of-code

./: .gitignore  README.md  conftest.py  pytest.ini
2020/: Readme.md
2020/day1/: day1.py  day1_2.py  test_day1.py
2020/day10/: day10.py  test_day10.py
2022/: pyproject.toml
2023/: .pre-commit-config.yaml  pyproject.toml
2024/: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
2024/day1/: day1.py  test_day1.py
2024/day10/: day10.py  test_day10.py
2024/day11/: day11.py  test_day11.py
2024/day12/: day12.py  day12_V1.py  day12_V2.py  test_day12.py
2024/day13/: day13.py  test_day13.py
2024/day14/: day14.py  test_day14.py
2024/day15/: day15.py  day15_part2.py  test_day15.py
2024/day16/: day16.py  test_day16.py
2024/day17/: day17.py  test_day17.py
2024/day18/: day18.py  test_day18.py
2024/day19/: day19.py  day19_part2.py  test_day19.py
2024/day2/: day2.py  test_day2.py
2024/day20/: day20.py  test_day20.py
2024/day21/: day21.py
2024/day22/: day22.py  day22_V1.py  day22_part2.py  test_day22.py
2024/day23/: day23.py  day23_V2.py  test_day23.py
2024/day24/: day24.py  test_day24.py
2024/day25/: day25.py  test_day25.py
2024/day3/: day3.py  day3_V1.py  day3_part2.py  test_day3.py
2024/day4/: day4.py  day4_part2.py  test_day4.py
2024/day5/: day5.py  test_day5.py
2024/day6/: day6.py  test_day6.py
2024/day7/: day7.py  test_day7.py
2024/day8/: day8.py  test_day8.py
2024/day9/: day9.py  day9_part2.py  test_day9.py
advent_of_code_2023/: README.md  pyproject.toml
advent_of_code_2024/: .gitignore  README.md
(+198 files in other folders)
