[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.0",
    "ruff>=0.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.3.1",
    "pytest>=8.3.3",
    "rich>=13.9.4",
]
